fix(app): fix menu hidden by mobile UI

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
+html {
+  height: webkit-fill-available;
+}
 body {
   font-family: "Merriweather", serif;
-  min-height: 100vh;
-  margin: 0;
-  position: relative;
 }
 
 body::after {
@@ -20,8 +20,12 @@ a:active {
 }
 
 .mainRoute {
-  height: calc(100vh - 50px);
+  min-height: webkit-fill-available;
+  min-height: 100%;
+  height: 100vh;
   overflow: auto;
+  margin-bottom: -50px;
+  padding-bottom: 100px;
 }
 
 .mainRoute .title {
@@ -37,8 +41,20 @@ a:active {
 .home {
   background-image: url("./images/paper_red.jpg");
   color: white;
+  text-align: center;
 }
 
+.fabLogoContainer {
+  width: 90vw;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  text-align: center;
+}
+
+.fabLogo {
+  width: 75vw;
+}
 .section {
   background-image: url("./images/paper.jpg");
 }
@@ -183,7 +199,7 @@ a:active {
 }
 
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 50px;
